# blender-midi

./: .gitignore  Cargo.toml  LICENSE  README.md  Test.blend1  blender_dev_install.zsh  test.py
DOC/: ARCH_Rust_Server.md  README.md
bl_py/: __init__.py  blender_manifest.toml  dev_install.zsh  mi_node_tree.py  my_custom_node.py
bl_py/menu_ui/: mi_panel.py  mi_ui.py
bl_py/nodes/: mi_attr_nodes.py  mi_group_input.py  mi_test_node.py
bl_py/props/: mi_props.py
bl_py/sockets/: mi_sockets.py
mibl_py/: __init__.py  blender_manifest.toml  test.py
mibl_py/menu_ui/: __init_.py  __init__.py  mi_panel.py  mi_ui.py
mibl_py/node_tree/: __init__.py  mi_node_tree.py  mi_update.py
mibl_py/nodes/: __init__.py  mi_attr_nodes.py  mi_collectors.py  mi_group_input.py  mi_group_output.py  mi_input_nodes.py  mi_math_nodes.py  mi_midi_nodes.py  mi_sys_node.py  mi_test_node.py
mibl_py/ops/: __init__.py  mi_ops.py
mibl_py/prefs/: __init__.py  mi_prefs.py
mibl_py/props/: __init__.py  mi_props.py
mibl_py/sockets/: __init__.py  mi_sockets.py
mibl_py/utils/: blender_utils.py  mibl_utils.py
mibl_rs/: Cargo.toml
mibl_rs/src/: container.rs  lib.rs  midi_event.rs  midi_main.rs  midi_process_mesg.rs  midi_send_mesg.rs  setup_client_params.rs
mibl_rs/src/midi_server/: container.rs  math_utils.rs  midi_event.rs  midi_main.rs  midi_process_mesg.rs  midi_send_mesg.rs  mod.rs  setup_client_params.rs  sys_event.rs
mibl_rs/src/node_utils/: math.rs  mod.rs  sys_event.rs
src/: lib.rs  main.rs  midi_event.rs  midi_main.rs  midi_process_mesg.rs  midi_send_mesg.rs  setup_client_params.rs
