[package]
name = "mibllib"
version = "0.1.0"
authors = ["Axel Polin <axel.polin@scenabre.art>"]
edition = "2021"
description = "A midi Rust lib to expose Mackie Control Device to python in a friendly way"
homepage = "https://chamanyte.dev"
license = "GPL-2.0-or-later"
keywords = ["gamedev", "graphics", "cgi"]
categories = ["graphics", "game-development", "multimedia", "science", "simulation"]

[dependencies]
log = "*"
simple_logger = "5"
thiserror = "2"
midir = { version = "0.10.1", features = ["jack"] }
pyo3 = { version = ">=0.15", features = ["extension-module"] }
rand = "*"

[lib]
name = "mibllib"
crate-type = ["cdylib"]

# [dev-dependencies]
# log = "*"
# simple_logger = "2.1"
